# anomaly-detection-ex

./: .gitignore  main.py  pyproject.toml
config/: setting.ini
