[project]
name = "fastflow-vit"
version = "0.1.0"
requires-python = "==3.11.*"
dependencies = [
    "albucore>=0.0.11",
    "albumentations==1.4.14",
    "anomalib[loggers]>=2.1.0",
    "kornia>=0.7,<0.8",
    "lightning>=2.2,<3.0",
    "matplotlib>=3.8,<3.11",
    "open-clip-torch>=2.32.0",
    "opencv-python==4.10.0.84",
    "opencv-python-headless>=4.11.0.86",
    "pandas>=2.3.2",
    "scikit-learn==1.5.2",
    "timm==1.0.9",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.1",
]
